- Resolve the MAS.Start() with enrollment url. - Rethrow exception to caller if failed to generate PrivateKey - Resolve absolute url path for MASRequest.MASRequestBuilder